# rescue_amr_backend

./: .gitignore  README.md  _jsx_js_json_md_html_snapshot.txt  _py_snapshot.txt  admin_dashboard_jsx_js_snapshot.txt  database_py_sh_yml_txt_snapshot.txt  docker-guide.md  git-guide.md  jsx_js_snapshot.txt
Communication_System/: README.md
Communication_System/control_pc/voice_server/: session_manager.py
Communication_System/frontend/control_dashboard/: app.js
admin_dashboard/: .env  index.html  package.json  vite.config.js
admin_dashboard/src/: App.jsx  AresLogin.jsx  AresPages.css  AresShell.jsx  MonitorPage.jsx  WebRTCSession.jsx  main.jsx
admin_dashboard/src/components/: AresShell.jsx  ErrorBoundary.jsx  PanelHeader.jsx  Ring.jsx  SmoothMarker.jsx
admin_dashboard/src/css/: AresPages.css
admin_dashboard/src/hooks/: useClock.js  useMonitor.js  useSurvivors.js
admin_dashboard/src/pages/: AresLogin.jsx  MonitorPage.jsx  ReportPage.jsx  SyncPage.jsx  WorkerPage.jsx
admin_dashboard/src/router/: aresRouting.js
admin_dashboard/src/utils/: logger.js
ares-login/: package-lock.json
ares-login/src/: App.jsx  AresShell.jsx
ares-login/src/pages/: ReportPage.jsx  WorkerPage.jsx
bridge_ws/log/: latest_build
bridge_ws/src/ares_bridges/: package.xml  setup.py
bridge_ws/src/rescue_interfaces/: CMakeLists.txt
bridge_ws/src/rescue_interfaces/msg/: CoverageStatus.msg
database/: .dockerignore  Dockerfile  docker-compose.yml  face_test.py  init_and_run.sh  init_db.sql  requirements.txt  run.py  send_to_db_test.py
database/app/: .dockerignore  main.py
database/app/api/: endpoints.py
database/app/core/: config.py
database/app/models/: database.py
database/app/repositories/: turtlebot4_repository.py
database/app/services/: mqtt.py  rescue_amr_service.py  survivor_service.py  (+1 more)
turtlebot4_ws/src/rescue_bt_manager/: CMakeLists.txt  package.xml
turtlebot4_ws/src/rescue_bt_manager/config/: rescue_tree.xml
turtlebot4_ws/src/rescue_bt_manager/include/rescue_bt_manager/: check_survivor_sub.hpp  log_rescure_to_dashboard.hpp
turtlebot4_ws/src/rescue_bt_manager/src/: bt_db_bridge.py  rescue_bt_node.cpp
webrtc/: README.md  ares_webrtc_vision_server.py  run_ares_vision.sh  run_webrtc_gateway.sh  webrtc_gateway.py  webrtc_vision_server.py
(+97 files in other folders)
